# mfoc

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  README.md  aclocal.m4  autogen.sh  config.h  config.h.in  configure  configure.ac  mfoc-hardnested.sln
debian/: .gitignore  changelog  control  copyright  manpages  rules  watch
src/: Makefile.am  bf_bench_data.h  cmdhfmfhard.c  cmdhfmfhard.h  config_w.h  crapto1.c  crapto1.h  crypto1.c  getopt.c  getopt.h  mfoc-hardnested.1  mfoc-hardnested.vcxproj  mfoc-hardnested.vcxproj.filters  mfoc.1  mfoc.c  mfoc.h  mifare.c  mifare.h  nfc-utils.c  nfc-utils.h  parity.c  parity.h  slre.c  slre.h  stdlib.c  ui.c  ui.h  unistd_w.h  util.c  util.h  util_posix.c  util_posix.h  windows.h
src/hardnested/: hardnested_bf_core.c  hardnested_bf_core.h  hardnested_bf_core_AVX.c  hardnested_bf_core_AVX2.c  hardnested_bf_core_AVX512.c  hardnested_bf_core_NOSIMD.c  hardnested_bf_core_SSE2.c  hardnested_bitarray_core.c  hardnested_bitarray_core.h  hardnested_bitarray_core_AVX.c  hardnested_bitarray_core_AVX2.c  hardnested_bitarray_core_AVX512.c  hardnested_bitarray_core_NOSIMD.c  hardnested_bitarray_core_SSE2.c  hardnested_bruteforce.c  hardnested_bruteforce.h  hardnested_cpu_dispatch.c  hardnested_cpu_dispatch.h  tables.h
src/include/: dirent.h  err.h
src/lib/: liblzma.lib  libpthreadVSE3.lib  nfc.lib
